# music_genre_classifier

./: .gitignore  Makefile  README.md  pyproject.toml
configs/: config.yaml  neural_config.yaml
configs/data/: default.yaml  xmidi.yaml
configs/model/: muserenet.yaml  transformer.yaml
configs/model/classic/: knn.yaml  linear_svc.yaml  logistic_regression.yaml  mlp.yaml  random_forest.yaml  svc.yaml
docs/: mkdocs.yml
docs/docs/: index.md
midi_xai/data/: create_dataset.py  fetch_dataset.py  preprocess.py
midi_xai/models/: classic_model.py
midi_xai/models/neural/: __init__.py  muserenet.py  transformer.py
notebooks/: midi_dataset_exploration.ipynb
scripts/: prepare_data.py  test_dependencies.py  train_classic.py  train_neural.py
